--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
+/*NAV SECTION*/
+.navbar-nav {
+    gap: 20px;
+    padding: 20px;
+    color: rgb(255, 204, 0);
+}
+
+.navbar {
+    background-color: #130048;
+}
+
+/*HOME SECTION*/
 .overlay-container {
     position: relative;
     width: 100%;
@@ -27,12 +39,150 @@
     width: 450px;
 }
 
+/*RESUME SECTION*/
+.resume {
+    position: absolute;
+    top: 220%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 311px;
+    height: 143px;
+    color: rgb(255, 204, 0);
+    font-size: 80px;
+    font-family: Inika;
+    font-weight: 400;
+    word-wrap: break-word;
+}
+
+.line1 {
+    width: 1473px;
+    height: 0px;
+    border: 1px #FFD600 solid;
+}
+
+.line2 {
+    position: absolute;
+    top: 230%;
+    left: 48%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 660px;
+    height: 0px;
+    transform: rotate(90deg);
+    transform-origin: 0 0;
+    border: 1px #FFD600 solid;
+}
+
+.arrow1 {
+    position: absolute;
+    top: 300%;
+    left: 48%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 351.01px;
+    height: 0px;
+    transform: rotate(-180deg);
+    transform-origin: 0 0;
+    border: 2px #FFD600 solid;
+}
+
+.arrow2 {
+    position: absolute;
+    top: 250%;
+    left: 59.9%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 351.01px;
+    height: 0px;
+    border: 2px #FFD600 solid;
+}
+
+.highschl {
+    position: absolute;
+    top: 249.5%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 183px;
+    height: 37px;
+    color: #FFD600;
+    font-size: 30px;
+    font-family: Inika;
+    font-weight: 400;
+    word-wrap: break-word;
+}
+
+.text1 {
+    position: absolute;
+    top: 262%;
+    left: 82.3%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 250px;
+    height: 136px;
+    color: rgba(255, 214, 0, 0.67);
+    font-size: 30px;
+    font-family: Inika;
+    font-weight: 400;
+    word-wrap: break-word;
+}
+
+.lca {
+    position: absolute;
+    top: 299%;
+    left: 15%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 309px;
+    height: 37px;
+    color: #FFD600;
+    font-size: 30px;
+    font-family: Inika;
+    font-weight: 700;
+    word-wrap: break-word;
+}
+
+.text2 {
+    position: absolute;
+    top: 310%;
+    left: 14.78%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 301px;
+    color: #FFD600;
+    font-size: 30px;
+    font-family: Inika;
+    font-weight: 400;
+    word-wrap: break-word;
+}
+
+.resSec {
+    width: 2;
+    height: 881px;
+    background: linear-gradient(180deg, #4C3D75 50%, #4C3D75 50%);
+}
+
+/*ABOUT SECTION*/
+.abtSec {
+    width: 1;
+    height: 615px;
+    background: linear-gradient(180deg, #130048 0%, #4C3D75 77%);
+}
+
 .AboutMe {
     position: absolute;
     top: 160%;
     left: 20%;
     transform: translate(-50%, -50%);
     z-index: 1;
+    width: 1;
+    height: 143px;
+    color: rgb(255, 204, 0);
+    font-size: 80px;
+    font-family: Inika;
+    font-weight: 400;
+    word-wrap: break-word;
 }
 
 .Text {
@@ -41,69 +191,375 @@
     left: 70%;
     transform: translate(-50%, -50%);
     z-index: 1;
+    width: 654px;
+    height: 449px;
+    text-align: center;
+    color: rgb(255, 204, 0);
+    font-size: 30px;
+    font-family: Inika;
+    font-weight: 400;
+    word-wrap: break-word;
 }
 
-.resume {
+/*SKILLS SECTION*/
+.skSec {
+    width: 100%;
+    height: 758px;
+    background: linear-gradient(180deg, #4C3D75 50%, #4C3D75 50%);
+}
+
+.skills {
     position: absolute;
-    top: 220%;
+    top: 340%;
+    left: 52%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 250px;
+    height: 143px;
+    color: rgb(255, 204, 0);
+    font-size: 80px;
+    font-family: Inika;
+    font-weight: 400;
+    word-wrap: break-word;
+}
+
+.skillsym1 {
+    position: absolute;
+    top: 390%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 280px;
+    height: 250px;
+}
+
+.skill1 {
+    position: absolute;
+    top: 370%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 88px;
+    height: 36px;
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    font-family: Inter;
+    font-weight: 400;
+    word-wrap: break-word;
+}
+
+
+
+.skillsym2 {
+    position: absolute;
+    top: 390%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
+    width: 450px;
+    height: 250px;
 }
 
-.line2{
+.skill2 {
     position: absolute;
-    top: 230%;
-    left: 48%;
+    top: 370%;
+    left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
+    width: 88px;
+    height: 36px;
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    font-family: Inter;
+    font-weight: 400;
+    word-wrap: break-word;
 }
 
-.arrow1{
+.skillsym3 {
     position: absolute;
-    top: 300%;
-    left: 48%;
+    top: 390%;
+    left: 75%;
     transform: translate(-50%, -50%);
     z-index: 1;
+    width: 300px;
+    height: 3000px;
+
 }
 
-.arrow2{
+.skill3 {
     position: absolute;
-    top: 250%;
-    left: 59.9%;
+    top: 370%;
+    left: 75%;
     transform: translate(-50%, -50%);
     z-index: 1;
+    width: 185px;
+    height: 36px;
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    font-family: Inter;
+    font-weight: 400;
+    word-wrap: break-word;
+
 }
 
-.highschl{
+/*TESTIMONIAL SECTION*/
+.testisec {
+    width: 100%;
+    height: 800px;
+    background: linear-gradient(180deg, #4C3D75 25%, #130048 75%);
+}
+
+.Testimonials {
     position: absolute;
-    top: 249.5%;
-    left: 80%;
+    top: 430%;
+    left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
+    width: 504px;
+    height: 55px;
+    text-align: center;
+    color: rgb(255, 204, 0);
+    font-size: 80px;
+    font-family: Inika;
+    font-weight: 400;
+    line-height: 120px;
+    word-wrap: break-word;
 }
 
-.text1{
+.pic1 {
     position: absolute;
-    top: 262%;
-    left: 82.3%;
+    top: 470%;
+    left: 10%;
     transform: translate(-50%, -50%);
     z-index: 1;
+    width: 230px;
+    height: 230px;
+    background: goldenrod;
+    border-radius: 9999px;
 }
 
-.lca{
+.pic2 {
     position: absolute;
-    top: 299%;
-    left: 15%;
+    top: 470%;
+    left: 30%;
     transform: translate(-50%, -50%);
     z-index: 1;
+    width: 230px;
+    height: 230px;
+    background: goldenrod;
+    border-radius: 9999px;
 }
 
-.text2{
+.pic3 {
     position: absolute;
-    top: 310%;
-    left: 14.78%;
+    top: 470%;
+    left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
+    width: 230px;
+    height: 230px;
+    background: goldenrod;
+    border-radius: 9999px;
 }
 
+.pic4 {
+    position: absolute;
+    top: 470%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 230px;
+    height: 230px;
+    background: goldenrod;
+    border-radius: 9999px;
+}
+
+.pic5 {
+    position: absolute;
+    top: 470%;
+    left: 90%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 230px;
+    height: 230px;
+    background: goldenrod;
+    border-radius: 9999px;
+}
+
+.test1 {
+    position: absolute;
+    top: 500%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 230px;
+    height: 199px;
+    background: goldenrod;
+    border-radius: 15px;
+}
+
+.test2 {
+    position: absolute;
+    top: 500%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 230px;
+    height: 199px;
+    background: goldenrod;
+    border-radius: 15px;
+}
+
+.test3 {
+    position: absolute;
+    top: 500%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 230px;
+    height: 199px;
+    background: goldenrod;
+    border-radius: 15px;
+}
+
+.test4 {
+    position: absolute;
+    top: 500%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 230px;
+    height: 199px;
+    background: goldenrod;
+    border-radius: 15px;
+}
+
+.test5 {
+    position: absolute;
+    top: 500%;
+    left: 90%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 230px;
+    height: 199px;
+    background: goldenrod;
+    border-radius: 15px;
+}
+
+.Testimonial1 {
+    position: absolute;
+    top: 500%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 230px;
+    height: 185px;
+    text-align: center;
+    color: #777777;
+    font-size: 30px;
+    font-family: Inter;
+    font-weight: 500;
+    line-height: 45px;
+    word-wrap: break-word;
+}
+
+.Testimonial2 {
+    position: absolute;
+    top: 500%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 230px;
+    height: 185px;
+    text-align: center;
+    color: #777777;
+    font-size: 30px;
+    font-family: Inter;
+    font-weight: 500;
+    line-height: 45px;
+    word-wrap: break-word;
+}
+
+.Testimonial3 {
+    position: absolute;
+    top: 500%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 230px;
+    height: 185px;
+    text-align: center;
+    color: #777777;
+    font-size: 30px;
+    font-family: Inter;
+    font-weight: 500;
+    line-height: 45px;
+    word-wrap: break-word;
+}
+
+.Testimonial4 {
+    position: absolute;
+    top: 500%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 230px;
+    height: 185px;
+    text-align: center;
+    color: #777777;
+    font-size: 30px;
+    font-family: Inter;
+    font-weight: 500;
+    line-height: 45px;
+    word-wrap: break-word;
+}
+
+.Testimonial5 {
+    position: absolute;
+    top: 500%;
+    left: 90%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 230px;
+    height: 185px;
+    text-align: center;
+    color: #777777;
+    font-size: 30px;
+    font-family: Inter;
+    font-weight: 500;
+    line-height: 45px;
+    word-wrap: break-word;
+}
+
+/*PROJECT SECTION*/
+.projectBack{
+    background-color: #130048; width:100%; height:800px;
+}
+
+.Projects {
+    position: absolute;
+    top: 540%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 504px;
+    height: 55px;
+    text-align: center;
+    color: rgb(255, 204, 0);
+    font-size: 80px;
+    font-family: Inika;
+    font-weight: 400;
+    line-height: 120px;
+    word-wrap: break-word;
+}
+
+#card{
+    
+}
+
+.d-flex {
+    margin-left: 1rem;
+}
