--- a/css/styles.css
+++ b/css/styles.css
@@ -472,6 +472,7 @@
     font-family: Inter;
     font-weight: 600;
     word-wrap: break-word;
+    padding: 5px;
 }
 
 .Testimonial2 {
@@ -488,6 +489,7 @@
     font-family: Inter;
     font-weight: 600;
     word-wrap: break-word;
+   padding: 5px;
 }
 
 .Testimonial3 {
@@ -504,6 +506,7 @@
     font-family: Inter;
     font-weight: 600;
     word-wrap: break-word;
+    padding: 5px;
 }
 
 .Testimonial4 {
@@ -520,6 +523,7 @@
     font-family: Inter;
     font-weight: 600;
     word-wrap: break-word;
+    padding: 5px;
 }
 
 .Testimonial5 {
@@ -536,6 +540,7 @@
     font-family: Inter;
     font-weight: 600;
     word-wrap: break-word;
+    padding: 5px;
 }
 
 /*PROJECT SECTION*/
